# stateloom

./: .gitignore  .pre-commit-config.yaml  LICENSE  OPENCLAW.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependency-review.yml  release.yml  scorecard.yml  security.yml  version-bump.yml
docs/: api-reference.md  reference.md
examples/: 01_quick_start.py  02_unified_client.py  03_sessions_and_budget.py  04_pii_detection.py  05_guardrails.py  06_caching.py  07_local_models.py  08_durable_resumption.py  09_semantic_retries.py  10_time_travel.py  11_agents_and_consensus.py  12_experiments.py  13_kill_switch.py  14_langchain_langgraph.py  15_litellm.py  16_zero_trust_security.py  17_circuit_breaker.py  18_compliance.py  19_model_testing.py  20_proxy_gateway.py  README.md  agents_and_consensus.py  caching.py  circuit_breaker.py  cohere_example.py  compliance.py  durable_resumption.py  experiments.py  google_genai.py  guardrails.py  kill_switch.py  langchain_langgraph.py  litellm_example.py  local_models.py  mistral_example.py  model_testing.py  pii_detection.py  proxy_gateway.py  quick_start.py  semantic_retries.py  (+4 more)
src/stateloom/: __init__.py  chat.py  cli.py  concurrency.py  gate.py  mock.py  refine.py  retry.py
tests/: conftest.py  test_admin_locks.py  test_chat.py  test_checkpoint.py  test_concurrency_reliability.py  test_gate_compliance.py  test_gate_hierarchy.py  test_parent_child_sessions.py  test_retry.py  test_session_cancellation.py  test_session_suspension.py
tests/test_agent/: test_models.py  test_prompt_file.py  test_prompt_watcher.py  test_resolver.py  test_store.py
tests/test_auth/: test_bootstrap.py  test_dependencies.py  test_device_flow.py  test_endpoints.py  test_jwt.py  test_models.py  test_oidc.py  test_oidc_endpoints.py  test_password.py  test_permissions.py
tests/test_cache/: test_cache_middleware.py  test_memory_store.py  test_normalizer.py  test_redis_cache_store.py  test_redis_vector_backend.py  test_semantic.py  test_sqlite_store.py  test_vector_backend.py
tests/test_cli/: test_doctor.py  test_serve.py  test_stats.py  test_tail.py
tests/test_compliance/: test_audit.py  test_data_residency.py  test_legal_rules.py  test_profiles.py  test_purge.py  test_zero_retention.py
tests/test_consensus/: test_agent_consensus.py  test_aggregation.py  test_confidence.py  test_ee_gating.py  test_events.py  test_models.py  test_orchestrator.py  test_personas.py  test_strategies.py
tests/test_core/: test_concurrency.py  test_config.py  test_config_validation.py  test_context.py  test_errors.py  test_feature_gating.py  test_feature_registry.py  test_init.py  test_interfaces.py  test_organization.py  test_pricing.py  test_session.py  test_signals.py  test_tool_session.py
tests/test_dashboard/: test_agent_api.py  test_api_versioning.py  test_auth_middleware.py  test_consensus_api.py  test_debug_endpoints.py  test_experiment_crud.py  test_guardrails_api.py  test_log_buffer.py  test_loop_detection_api.py  test_websocket_auth.py
tests/test_e2e/: conftest.py  helpers.py  test_cache_hit.py  test_cloud_with_shadow.py  test_local_routed_call.py  test_local_with_shadow.py  test_pii_block.py  test_single_cloud_call.py
tests/test_ee/: test_license.py  test_license_gating.py  test_restricted_dev_mode.py
tests/test_experiment/: test_agent_experiment.py  test_api.py  test_assigner.py  test_backtest.py  test_manager.py  test_middleware.py  test_models.py
tests/test_export/: test_bundle.py
tests/test_ext/: test_langchain.py  test_langgraph.py
tests/test_guardrails/: test_local_validator.py  test_new_patterns.py  test_nli_classifier.py  test_output_scanner.py  test_patterns.py
tests/test_intercept/: test_adapter_response.py  test_cohere_adapter.py  test_custom_provider.py  test_gemini_patch.py  test_genai_adapter.py  test_generic_interceptor.py  test_litellm_adapter.py  test_mistral_adapter.py  test_provider_adapter.py  test_provider_registry.py
tests/test_jobs/: __init__.py  test_agent_jobs.py  test_api.py  test_job_model.py  test_processor.py  test_queue.py  test_redis_queue.py  test_store_jobs.py  test_webhook.py
tests/test_local/: test_adapter.py  test_client.py  test_hardware.py  test_manager.py  test_models.py
tests/test_manual/: test_parent_child.py
tests/test_middleware/: test_auto_router.py  test_blast_radius.py  test_budget_hierarchy.py  test_cache_compliance.py  test_circuit_breaker.py  test_compliance.py  test_cost_tracker_model.py  test_cost_tracker_tool_continuation.py  test_embedding_cache.py  test_force_local.py  test_guardrails.py  test_kill_switch.py  test_pii_conversation_dedup.py  test_pii_hierarchy.py  test_pipeline_framework_context.py  test_precompute.py  test_rate_limiter.py  test_routing_compliance.py  test_semantic_router.py  test_shadow.py  test_similarity.py  test_store_sync.py  test_streaming_pipeline.py  test_timeout.py
tests/test_mock/: test_mock.py
tests/test_observability/: test_aggregator.py  test_collector.py  test_observability_api.py
tests/test_pii/: test_compliance_patterns.py  test_ner_detector.py  test_rehydrator.py  test_scanner.py  test_stream_buffer.py
tests/test_production/: conftest.py  helpers.py  test_async_jobs.py  test_auto_routing.py  test_blast_radius.py  test_budget_enforcement.py  test_caching.py  test_checkpoints.py  test_circuit_breaker.py  test_compliance.py  test_durable_resumption.py  test_durable_streaming.py  test_experiments.py  test_kill_switch.py  test_loop_detection.py  test_managed_agents.py  test_multi_feature_workflow.py  test_org_team_budget.py  test_org_team_hierarchy.py  test_parent_child_sessions.py  test_pii_detection.py  test_proxy_endpoint.py  test_rate_limiting.py  test_semantic_retries.py  test_session_lifecycle.py  test_shadow_drafting.py  test_timeouts_cancellation.py  test_tool_tracking.py  test_virtual_keys.py
tests/test_proxy/: test_agent_proxy.py  test_anthropic_native.py  test_auth_helpers.py  test_auth_shared.py  test_billing_mode.py  test_catch_all.py  test_code_assist.py  test_end_user.py  (+14 more)
(+277 files in other folders)
