[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stateloom"
dynamic = ["version"]
description = "The control plane for AI agents. Track, secure, and optimize every agent run."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [{ name = "StateLoom Team" }]
keywords = ["llm", "agents", "middleware", "gateway", "observability", "pii", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "wrapt>=1.16",
    "rich>=13.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "tiktoken>=0.5",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
langchain = ["langchain-core>=0.1"]
langgraph = ["langgraph>=0.2"]
ner = ["gliner>=0.2"]
semantic = ["faiss-cpu>=1.7", "sentence-transformers>=2.2", "numpy>=1.24"]
postgres = ["psycopg[pool]>=3.1"]
redis = ["redis>=5.0"]
encryption = ["cryptography>=41.0"]
metrics = ["prometheus-client>=0.19"]
tracing = ["opentelemetry-sdk>=0.42", "opentelemetry-exporter-otlp>=0.42"]
prompts = ["watchdog>=3.0"]
auth = ["pyjwt>=2.8", "argon2-cffi>=23.1"]
ee = ["cryptography>=41.0"]
migrations = ["alembic>=1.13", "sqlalchemy>=2.0"]
mistral = ["mistralai>=1.0"]
cohere = ["cohere>=5.0"]
litellm = ["litellm>=1.40"]
genai = ["google-genai>=1.0"]
all = ["stateloom[presidio]", "stateloom[langchain]", "stateloom[langgraph]", "stateloom[semantic]", "stateloom[ner]", "stateloom[redis]", "stateloom[postgres]", "stateloom[metrics]", "stateloom[tracing]", "stateloom[prompts]", "stateloom[migrations]", "stateloom[mistral]", "stateloom[cohere]", "stateloom[litellm]", "stateloom[auth]", "stateloom[genai]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "respx>=0.20",
]

[project.scripts]
stateloom = "stateloom.cli:main"

[project.urls]
Homepage = "https://github.com/stateloom/stateloom"
Documentation = "https://docs.stateloom.io"

[tool.hatch.version]
path = "src/stateloom/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/stateloom/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stateloom"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
