[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stateloom"
dynamic = ["version"]
description = "The control plane for AI agents. Track, secure, and optimize every agent run."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{ name = "StateLoom Team" }]
keywords = ["llm", "agents", "middleware", "gateway", "observability", "pii", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "wrapt>=1.16",
    "rich>=13.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "tiktoken>=0.5",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "click>=8.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
langchain = ["langchain-core>=0.1"]
langgraph = ["langgraph>=0.2"]
ner = ["gliner>=0.2"]
semantic = ["faiss-cpu>=1.7", "sentence-transformers>=2.2", "numpy>=1.24"]
postgres = ["psycopg[pool]>=3.1"]
redis = ["redis>=5.0"]
encryption = ["cryptography>=41.0"]
metrics = ["prometheus-client>=0.19"]
tracing = ["opentelemetry-sdk>=0.42", "opentelemetry-exporter-otlp>=0.42"]
prompts = ["watchdog>=3.0"]
auth = ["pyjwt>=2.8", "argon2-cffi>=23.1"]
ee = ["cryptography>=41.0"]
migrations = ["alembic>=1.13", "sqlalchemy>=2.0"]
mistral = ["mistralai>=1.0"]
cohere = ["cohere>=5.0"]
litellm = ["litellm>=1.40"]
openclaw = ["nodeenv>=1.9"]
all = ["stateloom[presidio]", "stateloom[langchain]", "stateloom[langgraph]", "stateloom[semantic]", "stateloom[ner]", "stateloom[redis]", "stateloom[postgres]", "stateloom[metrics]", "stateloom[tracing]", "stateloom[prompts]", "stateloom[migrations]", "stateloom[mistral]", "stateloom[cohere]", "stateloom[litellm]", "stateloom[auth]", "stateloom[openclaw]"]
typecheck = [
    "mypy==1.19.1",
    "openai>=1.0",
    "anthropic>=0.39",
    "google-generativeai>=0.4",
    "google-genai>=1.0",
    "cohere>=5.0",
    "mistralai>=1.0",
    "litellm>=1.40",
    "zstandard>=0.22",
    "requests>=2.31",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.14,<1.0",
    "mypy==1.19.1",
    "respx>=0.20",
    "openai>=1.0",
    "anthropic>=0.39",
    "google-generativeai>=0.4",
]

[project.scripts]
stateloom = "stateloom.cli:main"

[project.urls]
Homepage = "https://github.com/stateloom/stateloom"
Documentation = "https://docs.stateloom.io"

[tool.hatch.version]
path = "src/stateloom/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/stateloom/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stateloom"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]
"tests/**" = ["F401", "F841", "F811", "N806", "N803", "E501", "E402", "E741"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "stateloom.ext.langchain",
    "stateloom.ext.langgraph",
    "stateloom.intercept.adapters.gemini_adapter",
    "stateloom.jobs.processor",
    "stateloom.chat",
    "stateloom.auth.jwt",
    "stateloom.auth.oidc",
    "stateloom.proxy.router",
    "stateloom.cache.semantic",
    "stateloom.cli.openclaw_commands",
]
warn_unused_ignores = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
